# metalc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.rst  Doxyfile  LICENSE.txt  README.rst  configure  settings-template.cmake  toolchain-template.cmake
config/: default-build-config.ini  toolchains.ini
config/build-systems/: README.rst
config/build-systems/gcc/: common.mako
config/build-systems/gcc/x86_64/gnu/: compiler.in
docs/: abi.rst  ctype.rst  math.h.rst  stdio.rst  stdlib.rst  string.h.rst  string.rst  support.rst
include/: CMakeLists.txt
include/mcinternal/: printf.h  string.h
include/metalc/: assert.h  atomic.h  crtinit.h  ctype.h  errno.h  fcntl.h  float.h  iso646.h  kernel_hooks.h  limits.h  locale.h  math.h  metalc.h  metalc.h.in  posix.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  wchar.h
include/metalc/bits/: architecture.h  errno.h  printf.h  signal.h  stddef.h  stdio.h  stdlib_longlong.h
include/metalc/bits/sys/: mman.h
include/metalc/charsets/: common.h  utf8.h
include/metalc/internal/: annotations.h  architecture.h  efi_shim.h  printf.h  string.h
include/metalc/mips/: metalc.s.in
include/metalc/sys/: mman.h
include/metalc/x86/: metalc.asm.in  setjmp.inc
src/: CMakeLists.txt  assert.c  crtinit.c  ctype.c  errno.c  file_io.c  kernel_hooks.c  locale.c  malloc.c  math.c  posix.c  printf.c  signal.c  stdio.c  stdlib.c  string.c
src/mips32/: setjmp.s
src/mips64/: setjmp.s
src/tests/: ctype.c  file_io.c  main.c  printf.c  string.c  testing.c  testing.h
src/tests/wchar/: utf8.c
src/wchar/: utf8.c
src/x86_16/: setjmp.asm
src/x86_32/: setjmp.asm
src/x86_64/: atomic.asm  setjmp.asm
templates/: settings.cmake  target-platform.mako  test-settings.ini
templates/include/metalc/: metalc.h
templates/include/metalc/internal/: config.h
templates/include/metalc/x86/: metalc.inc
tests/: build-settings.ini  conftest.py  requirements.txt  test_runner.c
tests/include/: testing.h
tests/test_cases/: ctype.c
tests/test_cases/generic/file_io/: mode_string_to_flags.c
tests/test_cases/generic/file_io/wchar/: utf8.c
tests/test_cases/generic/string/memchr/: basic.c  not_found.c
tests/test_cases/generic/string/memcmp/: no_character_zero_equal.c  one_character_nonzero_equal.c  zero_length.c
tests/x86/: test_hooks.asm
tests/x86/x86_64/: test_hooks.asm
tests/x86_16/: test_hooks.asm
tests/x86_32/: test_hooks.asm
tests/x86_64/: test_hooks.asm
